# tauri-vite-ant-routes-template

./: .prettierrc  defaultSettings.ts  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
mock/: files.ts  mock-server.tsx  user.ts  user.tsx
src/: App.tsx  Greeting.tsx  main.tsx  request.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: files.rs  lib.rs  main.rs  service.rs  util.rs
src/components/directory/: index.tsx
src/config/: routes.tsx
src/layout/: exception-403.tsx  exception-404.tsx  exception-500.tsx  with-access.tsx  with-loading.tsx
src/pages/: directories.tsx  login.tsx  settings.tsx
src/service/: files.tsx  types.d.ts  user.tsx
src/store/: global.tsx
