[package]
name = "cloud"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[util]
name = "cloud_util"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-http = "2.5.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-sql = "2.3.0"
tokio = "1.46.0"
notify = "8.1.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.tauri]
version = "2"
features = ["tray-icon"]

